# electrodiffusive-network-model

./: .gitignore  LICENSE  README.md  setup.cfg
example/: plotter.py  run_model.py  set_style.py  spike_train.npz
src/ednm/: compile_jacobian_function.py  compile_residual_function.py  model.py  solver.py
