[metadata]
name = ednm
version = 0.1.0
author = Marte Julie Sætra
author_email = martejulie@simula.no
description = An electrodiffusive network model
licence = MIT License

[options]
packages = find:
install_requires=
    numpy
    numba
    scipy
package_dir=
    =src
zip_safe = True
include_package_data = True

[options.packages.find]
    where=src    

[options.package_data]
ednm = *.so
